# swagger/swagger.json
@@ -15,10 +15,10 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/practicas_academicas/": {
+        "/practicas-academicas/": {
             "get": {
                 "tags": [
-                    "practicas_academicas"
+                    "practicas-academicas"
                 ],
                 "description": "get Practicas_academicas",
                 "operationId": "PracticasAcademicasController.GetAll",
@@ -77,7 +77,7 @@
             },
             "post": {
                 "tags": [
-                    "practicas_academicas"
+                    "practicas-academicas"
                 ],
                 "description": "create Practicas_academicas",
                 "operationId": "PracticasAcademicasController.Create",
@@ -105,10 +105,10 @@
                 }
             }
         },
-        "/practicas_academicas/consultar_colaborador/{id}": {
+        "/practicas-academicas/colaboradores/{id}": {
             "get": {
                 "tags": [
-                    "practicas_academicas"
+                    "practicas-academicas"
                 ],
                 "description": "get información del docente colaborador",
                 "operationId": "PracticasAcademicasController.ConsultarInfoColaborador",
@@ -135,80 +135,10 @@
                 }
             }
         },
-        "/practicas_academicas/consultar_espacios_academicos/{id}": {
-            "get": {
-                "tags": [
-                    "practicas_academicas"
-                ],
-                "description": "get estados de practica academica",
-                "operationId": "PracticasAcademicasController.ConsultarEspaciosAcademicos",
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Practicas_academicas"
-                        }
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            }
-        },
-        "/practicas_academicas/consultar_parametros/": {
-            "get": {
-                "tags": [
-                    "practicas_academicas"
-                ],
-                "description": "get parametros para creación de practica academica",
-                "operationId": "PracticasAcademicasController.ConsultarParametros",
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Practicas_academicas"
-                        }
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            }
-        },
-        "/practicas_academicas/consultar_solicitante/{id}": {
-            "get": {
-                "tags": [
-                    "practicas_academicas"
-                ],
-                "description": "get información del docente solicitante de la practica academica",
-                "operationId": "PracticasAcademicasController.ConsultarInfoSolicitante",
-                "parameters": [
-                    {
-                        "in": "id",
-                        "name": "id",
-                        "description": "terceros",
-                        "schema": {
-                            "$ref": "#/definitions/perteneciente"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Practicas_academicas"
-                        }
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            }
-        },
-        "/practicas_academicas/enviar_invitacion/": {
+        "/practicas-academicas/enviar-invitacion/": {
             "post": {
                 "tags": [
-                    "practicas_academicas"
+                    "practicas-academicas"
                 ],
                 "description": "enviar invitaciones al correo de los estudiantes",
                 "operationId": "PracticasAcademicasController.EnviarInvitaciones",
@@ -236,10 +166,80 @@
                 }
             }
         },
-        "/practicas_academicas/{id}": {
+        "/practicas-academicas/espacios-academicos/{id}": {
             "get": {
                 "tags": [
-                    "practicas_academicas"
+                    "practicas-academicas"
+                ],
+                "description": "get estados de practica academica",
+                "operationId": "PracticasAcademicasController.ConsultarEspaciosAcademicos",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Practicas_academicas"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
+        "/practicas-academicas/parametros/": {
+            "get": {
+                "tags": [
+                    "practicas-academicas"
+                ],
+                "description": "get parametros para creación de practica academica",
+                "operationId": "PracticasAcademicasController.ConsultarParametros",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Practicas_academicas"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
+        "/practicas-academicas/solicitantes/{id}": {
+            "get": {
+                "tags": [
+                    "practicas-academicas"
+                ],
+                "description": "get información del docente solicitante de la practica academica",
+                "operationId": "PracticasAcademicasController.ConsultarInfoSolicitante",
+                "parameters": [
+                    {
+                        "in": "id",
+                        "name": "id",
+                        "description": "terceros",
+                        "schema": {
+                            "$ref": "#/definitions/perteneciente"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Practicas_academicas"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
+        "/practicas-academicas/{id}": {
+            "get": {
+                "tags": [
+                    "practicas-academicas"
                 ],
                 "description": "get Practicas_academicas by id",
                 "operationId": "PracticasAcademicasController.GetOne",
@@ -266,7 +266,7 @@
             },
             "put": {
                 "tags": [
-                    "practicas_academicas"
+                    "practicas-academicas"
                 ],
                 "description": "update the Practicas_academicas",
                 "operationId": "PracticasAcademicasController.Put",
@@ -318,7 +318,7 @@
     },
     "tags": [
         {
-            "name": "practicas_academicas",
+            "name": "practicas-academicas",
             "description": "PracticasAcademicasController operations for Practicas_academicas\n"
         }
     ]
